# MLX_W3_DD_transformers

./: .env.example  .gitignore  README.md  dataset.py  env.yml  pyproject.toml
misc/: gpu_test.py
model/: 00_dataset.py  01_train_enc.py  01_train_encoder.py  decoder.py  egapp.py  encoder.py  image_grid_dataset.py  patch_and_embed.py  test-image-grid-dataset.ipynb  train_enc_dec.py  transformer.py
